# sispace

./: .gitignore  AGENTS.md  CURSORSI_CLI_PLAN.md  Cargo.toml  README.md  SISPACE_GTK4_PLAN.md  SISPACE_PLAN.md  SISPACE_V2_PLAN.md  package-lock.json  package.json
.cursor/: hooks.json
cli/: .gitignore  README.md  loc.json  package-lock.json  package.json  run.sh  tsconfig.json
config/: sispace.yaml
gtk-app/: Cargo.toml  build.rs
gtk-app/resources/: icons.gresource.xml
gtk-app/src/: app_state.rs  gtk_events.rs  main.rs  smoke.rs  theme.rs
gtk-app/src/ui/: mod.rs  presets_dialog.rs
gtk-app/src/ui/canvas/: canvas_tab.rs  mod.rs
gtk-app/src/ui/harness/: harness_panel.rs  mod.rs
gtk-app/src/ui/sispace/: meta_panel.rs  mod.rs  pane_events.rs  session_sidebar.rs  sispace_tab.rs  sispace_ui.rs  spawn_dialog.rs  terminal_column.rs  vte_paste.rs
gtk-app/src/ui/siswarm/: mod.rs  siswarm_tab.rs  visualizer.rs
sispace-core/: Cargo.toml
sispace-core/src/: lib.rs  state.rs
sispace-core/src/db/: cost.rs  messages.rs  mod.rs  presets.rs  search.rs  swarm.rs  tasks.rs  terminals.rs
sispace-core/src/db/migrations/: 001_initial.sql  002_swarm_meta.sql  003_subagent_model.sql  004_workspace_presets.sql  005_swarm_worktree.sql
sispace-core/src/models/: mod.rs  search.rs  task.rs
sispace-core/src/services/: canvas.rs  config.rs  doctor.rs  git.rs  harness_client.rs  hp_snapshot.rs  mod.rs  node_host.rs  notify_hub.rs  obsidian.rs  pane.rs  pane_ipc.rs  pipeline_client.rs  shutdown.rs  swarm.rs  swarm_client.rs  swarm_workspace.rs  terminal.rs  workspace.rs
(+631 files in other folders)
