[package]
name = "sispace-gtk"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "SISpace GTK4 / libadwaita desktop shell"

[[bin]]
name = "sispace-gtk"
path = "src/main.rs"

[build-dependencies]
glib-build-tools = "0.20"

[dependencies]
sispace-core = { path = "../sispace-core" }
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
vte4 = { version = "0.8", features = ["v0_76"] }
serde_json = "1"
