[package]
name = "sispace-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "SISpace core — DB, services, pane PTY (GTK4 / Tauri adapters)"

[lib]
name = "sispace_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
urlencoding = "2"
libc = "0.2"
portable-pty = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
